--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,18 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.21.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "csv-parser": "^3.2.0",
         "dotenv": "^16.6.1",
         "express": "^4.19.2",
+        "fluent-ffmpeg": "^2.1.3",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.21.0"
+        "mongoose": "^8.21.0",
+        "multer": "^2.0.2",
+        "nodejs-whisper": "^0.2.9",
+        "ollama": "^0.6.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
